app/quiz.css
body {
    padding-top: 70px;
    padding-bottom: 10px;
}

div.divider {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.nav-title {
    font-size: 2rem;
    height: 3.2rem;
    padding: .7rem 0rem;
    font-weight: bold;
    display: inline;
    vertical-align: middle;
}

.nav-icon {
    height: 3rem;
    margin-right: 1rem;
    vertical-align: middle;
}

.quiz-answer-box {
    display: block;
    width: 100%;
    border: .1rem solid #5764c6;
    border-radius: .3rem;
    font-size: 1.4rem;
    /*height: 3.2rem;*/
    padding: .7rem 1.5rem;
    margin-top: 5px;
}

.quiz-answer-box-highlight {
    background-color: lightgray;
}

@media screen and (min-width: 500px) {
    .container {
        padding-left: 0;
        padding-right: 0;
    }
}

h3 {
    margin-top: 2rem;
}

/* Fix for #34 */
[disabled], .disabled {
    cursor: default;
    opacity: .5;
    pointer-events: none;
}

